[project]
name = "gestalt-motion-planner-test"
version = "0.0.2"
description = "Gestalt Path Planner"
authors = [
  { name = "Mirko Kunze" },
]
readme = "readme.md"

[tool.scikit-build]
build.verbose = true
cmake.version = "CMakeLists.txt"
cmake.source-dir = "python"
logging.level = "INFO"
wheel.packages = []

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"
